--- a/style.css
+++ b/style.css
@@ -12,15 +12,17 @@ header{
   margin: auto;
   height: auto;
 }
-.painter{
+.img-div{
   width: 200px;
   height: auto;
   margin-right: 20px;
   float: left;
 }
-#img1{
-  width: 100%;
-  height: 200px;
+#image{
+  max-width: 100%;
+  display: block;
+  height: auto;
+  margin: auto;
   border-radius: 70px;
 }
 h1, h2 {
@@ -33,14 +35,14 @@ blockquote{
   font-size: 20px;
   text-align: center;
 }
-.descriptionpainter h1, .descriptionpainter h2, .descriptionpainter blockquote {
+.header-text h1, .header-text h2, .header-text blockquote {
   text-align: left;
 }
 h3{
   font-size: 25px;
   text-align: center;
 }
-article{
+#tribute-info{
   width: 60%;
   height: auto;
   margin: auto;
